--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <label id="aLabel">Side A:</label><br>
-    <input type="text" id="aTextBox"><br>
-    <label id="bLabel">Side B:</label><br>
-    <input type="text" id="bTextBox"><br>
-    <button type="button" id="submitButton">submit</button><br>
-    <label id="cLabel"></label><br>
+    
+    <label id="countLabel">0</label><br>
+    <button id="decrease">decrease</button>
+    <button id="reset">reset</button>
+    <button id="increase">increase</button>
 
     <script src="index.js"></script>
 </body>
