--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <label id="countLabel">0</label><br>
-    <button id="decrease">decrease</button>
-    <button id="reset">reset</button>
-    <button id="increase">increase</button>
 
+    <label id="xLabel"></label><br>
+    <label id="yLabel"></label><br>
+    <label id="zLabel"></label><br>
+
+    <button type="button" id="button">roll</button>
     <script src="index.js"></script>
 </body>
 </html>
